--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -368,61 +368,64 @@ ensureVoicesLoaded(() => {
         });
 
         // Inicialização da Conversa
-        async function initializeConversation() {
-            firebase.auth().onAuthStateChanged(async (user) => {
-                if (user) {
-                    userId = user.uid;
-                    console.log("User authenticated. User ID:", userId);
+async function initializeConversation() {
+    firebase.auth().onAuthStateChanged(async (user) => {
+        if (user) {
+            userId = user.uid;
+            console.log("User authenticated. User ID:", userId);
 
-                    const urlParams = new URLSearchParams(window.location.search);
-                    const level = urlParams.get('level') || 'Level1';
-                    const unit = urlParams.get('unit') || 'Unit1';
+            const urlParams = new URLSearchParams(window.location.search);
+            const level = urlParams.get('level') || 'Level1';
+            const unit = urlParams.get('unit') || 'Unit1';
 
-                    try {
-                        const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
-                        if (!response.ok) throw new Error("Failed to initialize conversation.");
+            try {
+                const response = await fetch(`/api/start?uid=${userId}&level=${level}&unit=${unit}`);
+                if (!response.ok) throw new Error("Failed to initialize conversation.");
 
-                        const data = await response.json();
-                        console.log("Server Response:", data);
+                const data = await response.json();
+                console.log("Server Response:", data);
 
-                        chatHistory = data.chatHistory || [];
-                        messageElement.innerText = data.response;
+                chatHistory = data.chatHistory || [];
+                messageElement.innerText = data.response;
 
-                        messageElement.style.visibility = "hidden";
+                messageElement.style.visibility = "hidden";
 
-                        speakButton.style.display = "block";
+                speakButton.style.display = "block";
 
-                        if (!speakButton.hasAttribute('data-initialized')) {
-                            speakButton.setAttribute('data-initialized', 'true');
+                if (!speakButton.hasAttribute('data-initialized')) {
+                    speakButton.setAttribute('data-initialized', 'true');
 
-                            speakButton.addEventListener("click", () => {
-                                if (speakButton.innerText === "Press to Start") {
-                                    messageElement.style.visibility = "visible";
-                                    if (data.response) {
-    speak(data.response);
-} else {
-    console.error("Erro: Resposta da IA ausente.");
-    messageElement.innerText = "No response received from the server.";
-}
-                                    speakButton.innerText = "Press to Speak";
-                                } else {
-                                    recognition.start();
-                                }
-                            });
+                    speakButton.addEventListener("click", () => {
+                        if (speakButton.innerText === "Press to Start") {
+                            messageElement.style.visibility = "visible";
+                            if (data.response) {
+                                speak(data.response);
+                            } else {
+                                console.error("Erro: Resposta da IA ausente.");
+                                messageElement.innerText = "No response received from the server.";
+                            }
+                            speakButton.innerText = "Press to Speak";
+                        } else {
+                            recognition.start();
                         }
-                    } catch (error) {
-                        console.error("Error initializing conversation:", error);
-                        messageElement.innerText = "An unexpected error occurred. Try again later.";
-                        speakButton.disabled = true;
-                        messageElement.style.visibility = "visible";
-                    }
-                } else {
-                    console.warn("User is not logged in.");
-                    messageElement.innerText = "Please log in to start the conversation.";
-                    messageElement.style.visibility = "visible";
+                    });
                 }
-            });
+            } catch (error) {
+                console.error("Error initializing conversation:", error);
+                messageElement.innerText = "An unexpected error occurred. Try again later.";
+                speakButton.disabled = true;
+                messageElement.style.visibility = "visible";
+            }
+        } else {
+            console.warn("User is not logged in. Redirecting to login page...");
+            messageElement.innerText = "Redirecting to login page...";
+            messageElement.style.visibility = "visible";
+
+            // Redireciona para a página de login
+            window.location.href = "https://hannahenglishcourse.vercel.app/Formulario/login.html";
         }
+    });
+}
 
         // Configuração Inicial ao Carregar a Página
         window.onload = () => {
