--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -205,7 +205,7 @@ window.addEventListener("DOMContentLoaded", updateSliderBackground);
         const fallbackInput = document.getElementById("fallback-input");
         if (fallbackInput) fallbackInput.style.display = 'block';
         speakButton.style.display = 'none';
-        messageElement.innerText = "Speech recognition is not supported or disabled in your browser. Please enable it or use the text input.";
+        messageElement.innerText = "Speech recognition is not supported or disabled in your browser. Please enable it.";
         messageElement.style.visibility = 'visible';
         console.warn("Speech recognition is not supported or disabled in this browser.");
         return false;
