--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -328,26 +328,25 @@ ensureVoicesLoaded(() => {
         }
     };
 
-recognition.onerror = (event) => {
-    isSpeaking = false; // Garante que o estado de fala seja resetado
-    speakButton.classList.remove("listening");
-    speakButton.innerText = "Press to Speak";
+ recognition.onerror = (event) => {
+        isSpeaking = false; // Garante que o estado de fala seja resetado
+        speakButton.classList.remove("listening");
+        speakButton.innerText = "Press to Speak";
 
-    // Tratamento de erros específicos
-    if (event.error === 'not-allowed') {
-        messageElement.innerText = "Microphone access is blocked. Please enable it to use speech recognition.";
-    } else if (event.error === 'no-speech') {
-        messageElement.innerText = "No speech detected. Please try again.";
-    } else if (event.error === 'audio-capture') {
-        messageElement.innerText = "No microphone detected. Please connect one and try again.";
-    } else if (event.error === 'service-not-allowed') {
-        messageElement.innerText = "Speech recognition is disabled in your browser. Check if your voice recognition and microphone are active.";
-    } else {
-        messageElement.innerText = `An error occurred: ${event.error}`;
-    }
-    messageElement.style.visibility = 'visible';
-    console.error("Speech recognition error:", event.error);
-};
+        // Tratamento de erros específicos
+        if (event.error === 'not-allowed (Check if your voice recognition and microphone are active)') {
+            messageElement.innerText = "Microphone access is blocked. Please enable it to use speech recognition.";
+        } else if (event.error === 'no-speech') {
+            messageElement.innerText = "No speech detected. Please try again.";
+        } else if (event.error === 'audio-capture') {
+            messageElement.innerText = "No microphone detected. Please connect one and try again.";
+        } else {
+            messageElement.innerText = `An error occurred: ${event.error}`;
+        }
+        messageElement.style.visibility = 'visible';
+        console.error("Speech recognition error:", event.error);
+    };
+}
 
         // Fallback para Mensagem Digitada
         document.addEventListener("DOMContentLoaded", () => {
