--- a/Atividades/LEX/index.html
+++ b/Atividades/LEX/index.html
@@ -204,9 +204,11 @@ window.addEventListener("DOMContentLoaded", updateSliderBackground);
     if (!('SpeechRecognition' in window || 'webkitSpeechRecognition' in window)) {
         const fallbackInput = document.getElementById("fallback-input");
         if (fallbackInput) fallbackInput.style.display = 'block';
-        speakButton.style.display = 'none';
+
+        // Exibir mensagem sem ocultar o botão
         messageElement.innerText = "Speech recognition is not supported or disabled in your browser. Please enable it.";
         messageElement.style.visibility = 'visible';
+
         console.warn("Speech recognition is not supported or disabled in this browser.");
         return false;
     }
@@ -329,24 +331,26 @@ ensureVoicesLoaded(() => {
     };
 
  recognition.onerror = (event) => {
-        isSpeaking = false; // Garante que o estado de fala seja resetado
-        speakButton.classList.remove("listening");
-        speakButton.innerText = "Press to Speak";
+    isSpeaking = false; // Garante que o estado de fala seja resetado
+    speakButton.classList.remove("listening");
+    speakButton.style.display = "block"; // Garante que o botão fique visível
+    speakButton.innerText = "Press to Speak";
 
-        // Tratamento de erros específicos
-        if (event.error === 'not-allowed (Check if your voice recognition and microphone are active)') {
-            messageElement.innerText = "Microphone access is blocked. Please enable it to use speech recognition.";
-        } else if (event.error === 'no-speech') {
-            messageElement.innerText = "No speech detected. Please try again.";
-        } else if (event.error === 'audio-capture') {
-            messageElement.innerText = "No microphone detected. Please connect one and try again.";
-        } else {
-            messageElement.innerText = `An error occurred: ${event.error}`;
-        }
-        messageElement.style.visibility = 'visible';
-        console.error("Speech recognition error:", event.error);
-    };
-}
+    // Tratamento de erros específicos
+    if (event.error === 'not-allowed') {
+        messageElement.innerText = "Microphone access is blocked. Please enable it to use speech recognition.";
+    } else if (event.error === 'no-speech') {
+        messageElement.innerText = "No speech detected. Please try again.";
+    } else if (event.error === 'audio-capture') {
+        messageElement.innerText = "No microphone detected. Please connect one and try again.";
+    } else if (event.error === 'service-not-allowed') {
+        messageElement.innerText = "Speech recognition is disabled in your browser. Check if your voice recognition and microphone are active.";
+    } else {
+        messageElement.innerText = `An error occurred: ${event.error}`;
+    }
+    messageElement.style.visibility = 'visible';
+    console.error("Speech recognition error:", event.error);
+};
 
         // Fallback para Mensagem Digitada
         document.addEventListener("DOMContentLoaded", () => {
@@ -390,7 +394,7 @@ async function initializeConversation() {
 
                 messageElement.style.visibility = "hidden";
 
-                speakButton.style.display = "block";
+                speakButton.style.display = "block"; // Garante que o botão fique visível
 
                 if (!speakButton.hasAttribute('data-initialized')) {
                     speakButton.setAttribute('data-initialized', 'true');
@@ -413,6 +417,7 @@ async function initializeConversation() {
             } catch (error) {
                 console.error("Error initializing conversation:", error);
                 messageElement.innerText = "An unexpected error occurred. Try again later.";
+                speakButton.style.display = "block"; // Garante o botão visível mesmo após erro
                 speakButton.disabled = true;
                 messageElement.style.visibility = "visible";
             }
