--- a/Atividades/Mixed Letters FIXO2/index.html
+++ b/Atividades/Mixed Letters FIXO2/index.html
@@ -210,8 +210,8 @@
 
         const user = firebase.auth().currentUser;
         if (!user) {
-            console.error("Usuário não autenticado.");
-            alert("Você deve estar logado para realizar esta ação.");
+            console.error("User not authenticated.");
+            alert("You must be logged in to perform this action.");
             return;
         }
 
@@ -221,26 +221,26 @@
         try {
             const snapshot = await progressRef.once('value');
             const isUnlocked = snapshot.val();
-            console.log("Próxima fase desbloqueada:", isUnlocked);
+            console.log("The next phase is locked:", isUnlocked);
 
             if (isUnlocked) {
                 history.back();
             } else {
-                console.warn("A próxima fase está bloqueada.");
-                const confirmMessage = "A próxima fase está bloqueada. Tem certeza de que deseja sair desta página?";
+                console.warn("The next phase is locked.");
+                const confirmMessage = "The next phase is still locked. Are you sure you want to leave this page before finishing it?";
                 if (confirm(confirmMessage)) {
                     history.back();
                 }
             }
         } catch (error) {
-            console.error("Erro ao verificar o progresso da fase:", error);
-            alert("Ocorreu um erro ao verificar o progresso.");
+            console.error("Error checking phase progress:", error);
+            alert("Error checking phase progress.");
         }
     });
 
     firebase.auth().onAuthStateChanged((user) => {
         if (user) {
-            console.log("Usuário autenticado com sucesso:", user.uid);
+            console.log("User successfully authenticated:", user.uid);
 
             const userId = user.uid;
             const userRoleRef = firebase.database().ref(`usuarios/${userId}/role`);
@@ -256,10 +256,10 @@
                     console.log("Usuário não é 'professor' ou 'proprietário'. Botão PDF oculto.");
                 }
             }).catch((error) => {
-                console.error("Erro ao buscar o role do usuário no Firebase:", error);
+                console.error("Error fetching user role from Firebase:", error);
             });
         } else {
-            console.warn("Nenhum usuário autenticado. Certifique-se de que o login foi realizado.");
+            console.warn("No user authenticated. Please make sure you are logged in.");
         }
     });
 
@@ -386,7 +386,7 @@
         if (user) {
             updateNextPhase(user.uid);
         } else {
-            console.error("Usuário não autenticado. Progresso não pode ser atualizado.");
+            console.error("User not authenticated. Progress cannot be updated.");
         }
     });
 }
