--- a/Atividades/MatchingGame/index.html
+++ b/Atividades/MatchingGame/index.html
@@ -293,7 +293,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 
 <script>
-    // Configuração do Firebase
+    // Firebase Configuration
     const firebaseConfig = {
         apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
         authDomain: "hannahenglishcourse.firebaseapp.com",
@@ -304,10 +304,10 @@
         appId: "1:449818788486:web:8a49d3f68591e6fb3f0707"
     };
 
-    // Inicialização do Firebase
+    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
 
-    // Exibir botão PDF para roles específicos
+    // Show the PDF button for specific roles
     firebase.auth().onAuthStateChanged((user) => {
         if (user) {
             const userId = user.uid;
@@ -319,39 +319,44 @@
                     document.getElementById("pdfButton").style.display = "inline-block";
                 }
             }).catch((error) => {
-                console.error("Erro ao buscar o role do usuário:", error);
+                console.error("Error fetching user role:", error);
             });
         } else {
-            console.log("Nenhum usuário autenticado.");
+            console.log("No authenticated user.");
         }
     });
 
-    // Carregar dados das lições
+    // Load lesson data on DOMContentLoaded
     document.addEventListener("DOMContentLoaded", function() {
         loadLessonData();
     });
 
-    let lessonData = []; // Declaração única de lessonData
+    let lessonData = []; // Unique declaration of lessonData
 
-    function loadLessonData() {
-        return fetch('https://hannahenglishcourse.vercel.app/Level1/Unit1/MatchingGame/texto.txt')
-            .then(response => response.text())
-            .then(data => {
-                const lines = data.split('\n').filter(line => line.trim() !== '');
-                lines.forEach((line, index) => {
-                    const [type, lesson, explanation] = line.split('|').map(item => item.trim());
-                    if (type === 'lesson' && lesson && explanation) {
-                        lessonData.push({
-                            img: `imagens/imagem${index + 1}.png`,
-                            title: lesson,
-                            text: explanation,
-                            matchIndex: index + 1
-                        });
-                    }
-                });
-                displayLessonsAndExplanations();
-            })
-            .catch(error => console.error("Erro ao carregar os dados:", error));
+    async function loadLessonData() {
+        const { level, unit } = getParamsFromURL();
+        const lessonFilePath = `../../../../${level}/${unit}/DataMatching/texto.txt`;
+        const imageBasePath = `../../../../${level}/${unit}/DataMatching/imagens/`;
+
+        try {
+            const response = await fetch(lessonFilePath);
+            const data = await response.text();
+            const lines = data.split('\n').filter(line => line.trim() !== '');
+
+            lessonData = lines.map((line, index) => {
+                const [type, lesson, explanation] = line.split('|').map(item => item.trim());
+                return {
+                    img: `${imageBasePath}imagem${index + 1}.png`,
+                    title: lesson,
+                    text: explanation,
+                    matchIndex: index + 1
+                };
+            });
+
+            displayLessonsAndExplanations();
+        } catch (error) {
+            console.error("Error loading lesson data:", error);
+        }
     }
 
     function displayLessonsAndExplanations() {
@@ -388,165 +393,145 @@
         return array;
     }
 
-  let selectedLeftItem = null;
+    let selectedLeftItem = null;
 
-function selectLeftItem(element) {
-    if (selectedLeftItem) {
-        selectedLeftItem.classList.remove('selected');
+    function selectLeftItem(element) {
+        if (selectedLeftItem) {
+            selectedLeftItem.classList.remove('selected');
+        }
+        selectedLeftItem = element;
+        element.classList.add('selected');
     }
-    selectedLeftItem = element;
-    element.classList.add('selected');
-}
 
-function selectRightItem(element) {
-    if (!selectedLeftItem) return;
+    function selectRightItem(element) {
+        if (!selectedLeftItem) return;
 
-    if (selectedLeftItem.dataset.match === element.dataset.match) {
-        // Correspondência correta
-        element.classList.add('correct');
-        selectedLeftItem.classList.add('used');
-        selectedLeftItem.classList.remove('selected');
-        
-        // Mostrar imagem e texto da lição correspondente
-        showLessonData(selectedLeftItem.dataset.match - 1);
+        if (selectedLeftItem.dataset.match === element.dataset.match) {
+            element.classList.add('correct');
+            selectedLeftItem.classList.add('used');
+            selectedLeftItem.classList.remove('selected');
 
-        selectedLeftItem = null;
-        checkCompletion(); // Verifica se todas as correspondências foram feitas
-    } else {
-        // Correspondência incorreta
-        element.classList.add('wrong');
-        setTimeout(() => {
-            element.classList.remove('wrong');
-        }, 1000);
+            showLessonData(selectedLeftItem.dataset.match - 1);
+            selectedLeftItem = null;
+            checkCompletion();
+        } else {
+            element.classList.add('wrong');
+            setTimeout(() => {
+                element.classList.remove('wrong');
+            }, 1000);
+        }
     }
-}
 
-// Função para exibir imagem e texto da lição
-function showLessonData(index) {
-    const data = lessonData[index];
-    const imageContainer = document.getElementById('image-container');
-    const lessonImage = document.getElementById('lesson-image');
-    const lessonTitle = document.getElementById('lesson-title');
-    const lessonText = document.getElementById('lesson-text');
+    function showLessonData(index) {
+        const data = lessonData[index];
+        const imageContainer = document.getElementById('image-container');
+        const lessonImage = document.getElementById('lesson-image');
+        const lessonTitle = document.getElementById('lesson-title');
+        const lessonText = document.getElementById('lesson-text');
 
-    lessonImage.src = data.img;
-    lessonTitle.textContent = data.title;
-    lessonText.textContent = data.text;
+        lessonImage.src = data.img;
+        lessonTitle.textContent = data.title;
+        lessonText.textContent = data.text;
 
-    imageContainer.style.display = 'flex';
-}
+        imageContainer.style.display = 'flex';
+    }
 
-// Função para fechar a imagem
-function closeImage() {
-    const imageContainer = document.getElementById('image-container');
-    imageContainer.style.display = 'none';
-}
+    function closeImage() {
+        const imageContainer = document.getElementById('image-container');
+        imageContainer.style.display = 'none';
+    }
 
     function restartGame() {
         window.location.reload();
     }
 
-function generatePDF() {
-    const { jsPDF } = window.jspdf;
-    const doc = new jsPDF();
+    function generatePDF() {
+        const { jsPDF } = window.jspdf;
+        const doc = new jsPDF();
 
-    // Caminho da logo
-    const logoPath = '../../../../imagens/hannah_logo.png';
+        const logoPath = '../../../../imagens/hannah_logo.png';
+        const logo = new Image();
+        logo.src = logoPath;
 
-    const logo = new Image();
-    logo.src = logoPath;
+        logo.onload = function() {
+            doc.addImage(logo, 'PNG', 10, 10, 30, 30);
 
-    logo.onload = function() {
-        // Adiciona a logo ao PDF
-        doc.addImage(logo, 'PNG', 10, 10, 30, 30);
+            doc.setFontSize(12);
+            doc.text("Name: ____________________________________________ Date: __________", 50, 20);
 
-        // Adiciona o título e as linhas para "Name" e "Date"
-        doc.setFontSize(12);
-        doc.text("Name: ____________________________________________ Date: __________", 50, 20);
+            doc.setFontSize(16);
+            doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
 
-        // Adiciona o título abaixo
-        doc.setFontSize(16);
-        doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
+            let yOffset = 70;
+            const lineSpacing = 10;
 
-        let yOffset = 70; // Posição inicial vertical
-        const lineSpacing = 10; // Espaço entre linhas
+            const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
+            const rightItems = Array.from(document.querySelectorAll('#explanations .drop-zone'));
 
-        const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
-        const rightItems = Array.from(document.querySelectorAll('#explanations .drop-zone'));
-
-        // Primeira coluna: Perguntas com numeração
-        doc.setFontSize(12);
-        leftItems.forEach((leftItem, index) => {
-            if (yOffset > 270) { // Adiciona uma nova página se o conteúdo ultrapassar o limite da página
-                doc.addPage();
-                yOffset = 20;
-            }
-
-            // Adiciona o item da coluna da esquerda com numeração
-            doc.text(`${index + 1}. ${leftItem.textContent}`, 20, yOffset);
-            yOffset += lineSpacing; // Move para a próxima linha
-        });
-
-        yOffset = 70; // Reseta o Y para alinhar a segunda coluna no topo
-
-        // Segunda coluna: Respostas sem numeração e com quebras de linha automáticas
-        rightItems.forEach((rightItem) => {
-            if (yOffset > 270) {
-                doc.addPage();
-                yOffset = 20;
-            }
-
-            // Ajuste o valor de `x` para mover a coluna mais à direita
-            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 90); // Ajusta o limite para 90 unidades de largura
-
-            lines.forEach((line) => {
-                doc.text(line, 110, yOffset); // Posição ajustada para a coluna da direita
-                yOffset += lineSpacing; // Espaçamento entre as linhas
-            });
-        });
-
-        doc.save("Hannah_Matching_Game.pdf");
-    };
-
-    logo.onerror = function() {
-        doc.setFontSize(12);
-        doc.text("Name: ____________________________________________ Date: __________", 50, 20);
-        doc.setFontSize(16);
-        doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
-
-        let yOffset = 70;
-        const lineSpacing = 10;
-
-        const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
-        const rightItems = Array.from(document.querySelectorAll('#explanations .drop-zone'));
-
-        doc.setFontSize(12);
-        leftItems.forEach((leftItem, index) => {
-            if (yOffset > 270) {
-                doc.addPage();
-                yOffset = 20;
-            }
-            doc.text(`${index + 1}. ${leftItem.textContent}`, 20, yOffset);
-            yOffset += lineSpacing;
-        });
-
-        yOffset = 70;
-
-        rightItems.forEach((rightItem) => {
-            if (yOffset > 270) {
-                doc.addPage();
-                yOffset = 20;
-            }
-            const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 90);
-            lines.forEach((line) => {
-                doc.text(line, 110, yOffset);
+            doc.setFontSize(12);
+            leftItems.forEach((leftItem, index) => {
+                if (yOffset > 270) {
+                    doc.addPage();
+                    yOffset = 20;
+                }
+                doc.text(`${index + 1}. ${leftItem.textContent}`, 20, yOffset);
                 yOffset += lineSpacing;
             });
-        });
 
-        doc.save("Hannah_Matching_Game.pdf");
-    };
-}
+            yOffset = 70;
+            rightItems.forEach((rightItem) => {
+                if (yOffset > 270) {
+                    doc.addPage();
+                    yOffset = 20;
+                }
+                const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 90);
+                lines.forEach((line) => {
+                    doc.text(line, 110, yOffset);
+                    yOffset += lineSpacing;
+                });
+            });
+
+            doc.save("Hannah_Matching_Game.pdf");
+        };
+
+        logo.onerror = function() {
+            doc.setFontSize(12);
+            doc.text("Name: ____________________________________________ Date: __________", 50, 20);
+            doc.setFontSize(16);
+            doc.text("Hannah Matching Game", doc.internal.pageSize.width / 2, 50, { align: "center" });
+
+            let yOffset = 70;
+            const lineSpacing = 10;
+
+            const leftItems = Array.from(document.querySelectorAll('#lessons .list-item'));
+            const rightItems = Array.from(document.querySelectorAll('#explanations .drop-zone'));
+
+            doc.setFontSize(12);
+            leftItems.forEach((leftItem, index) => {
+                if (yOffset > 270) {
+                    doc.addPage();
+                    yOffset = 20;
+                }
+                doc.text(`${index + 1}. ${leftItem.textContent}`, 20, yOffset);
+                yOffset += lineSpacing;
+            });
+
+            yOffset = 70;
+            rightItems.forEach((rightItem) => {
+                if (yOffset > 270) {
+                    doc.addPage();
+                    yOffset = 20;
+                }
+                const lines = doc.splitTextToSize(`(____) ${rightItem.textContent}`, 90);
+                lines.forEach((line) => {
+                    doc.text(line, 110, yOffset);
+                    yOffset += lineSpacing;
+                });
+            });
+
+            doc.save("Hannah_Matching_Game.pdf");
+        };
+    }
 
     function checkCompletion() {
         const allItems = document.querySelectorAll('.list-item.used');
@@ -558,54 +543,13 @@ function generatePDF() {
         }
     }
 
-    function showCompletionModal() {
-        document.getElementById('overlay').style.display = 'block';
-        document.getElementById('completion-modal').style.display = 'block';
-    }
-
-    function closeModal() {
-        document.getElementById('overlay').style.display = 'none';
-        document.getElementById('completion-modal').style.display = 'none';
-    }
-
-    function getPhaseFromURL() {
+    function getParamsFromURL() {
         const params = new URLSearchParams(window.location.search);
-        return params.get('fase');
-    }
-
-    function getLevelAndUnitFromURL() {
-        const url = window.location.pathname;
-        const parts = url.split('/');
-        return { level: parts[1], unit: parts[2] };
-    }
-
-    function updateProgressInDatabase() {
-        const currentPhase = getPhaseFromURL();
-        const { level, unit } = getLevelAndUnitFromURL();
-        
-        firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
-                const userId = user.uid;
-                const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
-
-                if (currentPhase === "last") {
-                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
-                    dbRef.parent.child(nextUnit).set({ fase1: true });
-                } else if (currentPhase === "end") {
-                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
-                    firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
-                } else {
-                    const phaseNumber = parseInt(currentPhase);
-                    if (!isNaN(phaseNumber)) {
-                        dbRef.update({ [`fase${currentPhase}`]: true });
-                        const nextPhase = phaseNumber + 1;
-                        dbRef.update({ [`fase${nextPhase}`]: true });
-                    }
-                }
-            } else {
-                console.error("Usuário não autenticado");
-            }
-        });
+        return {
+            level: params.get('level'),
+            unit: params.get('unit'),
+            fase: params.get('fase'),
+        };
     }
 </script>
 </body>
