--- a/Atividades/MatchingGame/index.html
+++ b/Atividades/MatchingGame/index.html
@@ -146,6 +146,27 @@
             max-width: 80%;
         }
 
+.back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    background-color: black;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.back-button:hover {
+    background-color: #333;
+    transform: scale(1.05);
+}
+
         .close-btn {
             position: absolute;
             top: 20px;
