--- a/Atividades/MatchingGame/index.html
+++ b/Atividades/MatchingGame/index.html
@@ -596,15 +596,31 @@ function ensureUserIsAuthenticated(callback) {
         };
     }
 
-    function checkCompletion() {
-        const allItems = document.querySelectorAll('.list-item.used');
-        const totalItems = document.querySelectorAll('.list-item').length;
+   function checkCompletion() {
+    const allItems = document.querySelectorAll('.list-item.used');
+    const totalItems = document.querySelectorAll('.list-item').length;
 
-        if (allItems.length === totalItems) {
-            showCompletionModal();
-            updateProgressInDatabase();
-        }
+    if (allItems.length === totalItems) {
+        showCompletionModal();
+        updateProgressInDatabase();
     }
+}
+
+function showCompletionModal() {
+    const overlay = document.getElementById('overlay');
+    const modal = document.getElementById('completion-modal');
+
+    overlay.style.display = 'block';
+    modal.style.display = 'block';
+}
+
+function closeModal() {
+    const overlay = document.getElementById('overlay');
+    const modal = document.getElementById('completion-modal');
+
+    overlay.style.display = 'none';
+    modal.style.display = 'none';
+}
 
     function getParamsFromURL() {
         const params = new URLSearchParams(window.location.search);
