--- a/Atividades/MatchingGame/index.html
+++ b/Atividades/MatchingGame/index.html
@@ -630,6 +630,34 @@ function closeModal() {
             fase: params.get('fase'),
         };
     }
+function updateProgressInDatabase() {
+        const currentPhase = getPhaseFromURL();
+        const { level, unit } = getLevelAndUnitFromURL();
+        
+        firebase.auth().onAuthStateChanged(function(user) {
+            if (user) {
+                const userId = user.uid;
+                const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
+
+                if (currentPhase === "last") {
+                    const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+                    dbRef.parent.child(nextUnit).set({ fase1: true });
+                } else if (currentPhase === "end") {
+                    const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+                    firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
+                } else {
+                    const phaseNumber = parseInt(currentPhase);
+                    if (!isNaN(phaseNumber)) {
+                        dbRef.update({ [`fase${currentPhase}`]: true });
+                        const nextPhase = phaseNumber + 1;
+                        dbRef.update({ [`fase${nextPhase}`]: true });
+                    }
+                }
+            } else {
+                console.error("Usuário não autenticado");
+            }
+        });
+    }
 </script>
 </body>
 </html>
