--- a/Atividades/LifeLessons/index.html
+++ b/Atividades/LifeLessons/index.html
@@ -391,28 +391,53 @@
 
     // Generate a PDF
     function generatePDF() {
-        const { jsPDF } = window.jspdf;
-        const doc = new jsPDF();
-        const img = new Image();
-        img.src = '../../../../imagens/hannah_logo.png';
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF();
+    const img = new Image();
+    img.src = '../../../../imagens/hannah_logo.png';
 
-        img.onload = () => {
-            doc.addImage(img, 'PNG', 10, 10, 20, 20);
-            doc.setFontSize(12);
-            doc.text("Name:__________________________ Date:______________", 40, 20);
-            doc.setFontSize(16);
-            doc.text("Life Lessons from the Bible", 10, 40);
+    img.onload = () => {
+        // Adiciona logo, campos de Name e Date
+        doc.addImage(img, 'PNG', 10, 10, 20, 20);
+        doc.setFontSize(12);
+        doc.text("Name:__________________________ Date:______________", 40, 20);
+        
+        // Título da atividade
+        doc.setFontSize(16);
+        doc.text("Life Lessons from the Bible", 10, 40);
 
-            let y = 60;
-            questions.forEach((q, i) => {
-                const questionText = `${i + 1}. ${q.question}`;
-                doc.text(questionText, 10, y);
-                y += 10;
-            });
+        // Adiciona as opções de resposta no topo
+        doc.setFontSize(12);
+        let answerOptions = questions.map(q => q.answer);
+        answerOptions = answerOptions.sort(() => Math.random() - 0.5); // Embaralha as opções
+        let splitOptions = doc.splitTextToSize("Answer Options: " + answerOptions.join(", "), 180);
+        doc.text(splitOptions, 10, 50);
 
-            doc.save("activity.pdf");
-        };
-    }
+        // Definições de layout
+        let y = 50 + splitOptions.length * 10; // Posiciona abaixo das opções
+        const lineHeight = 10;
+        const questionSpacing = 12;
+        const pageHeight = doc.internal.pageSize.height;
+
+        // Adiciona perguntas com quebras de linha e páginas
+        questions.forEach((q, i) => {
+            let questionText = `${i + 1}. ${q.question}`;
+            let splitQuestion = doc.splitTextToSize(questionText, 180);
+
+            // Verifica se há espaço suficiente na página para a pergunta
+            if (y + splitQuestion.length * lineHeight > pageHeight - 20) {
+                doc.addPage();
+                y = 20; // Reinicia o Y para a nova página
+            }
+
+            // Adiciona a pergunta no PDF
+            doc.text(splitQuestion, 10, y);
+            y += splitQuestion.length * lineHeight + questionSpacing;
+        });
+
+        doc.save("activity.pdf");
+    };
+}
 
     // Extract parameters from URL
     function getParamsFromURL() {
